force-app/main/default/objects/Special_Project__c/Special_Project__c.object-meta.xml
<CustomObject>
    <description>Used to store non-billable or non-case related special projects.</description>
    <label>Special Project</label>
    <nameField>
        <label>Special Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>