force-app/main/default/objects/Special_Project__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the special project is active (selectable).</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>