force-app/main/default/objects/Special_Project__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is a billable special project (used in Time Tracking)</description>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>