force-app/main/default/objects/Special_Project__c/fields/Location_Group__c.field-meta.xml
<CustomField>
    <fullName>Location_Group__c</fullName>
    <description>Indicates if the special project should appear at the top of the selection list or the bottom</description>
    <label>Location Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
                <default>true</default>
                <label>Top</label>
            </value>
            <value>
                <fullName>Bottom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>