force-app/main/default/objects/Special_Project__c/fields/Require_Comments__c.field-meta.xml
<CustomField>
    <fullName>Require_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if comments should be required for this special project type. (Used in Time Tracking)</description>
    <label>Require Comments</label>
    <type>Checkbox</type>
</CustomField>