force-app/main/default/objects/Special_Project__c/recordTypes/FR.recordType-meta.xml
<RecordType>
    <fullName>FR</fullName>
    <active>true</active>
    <description>FR Special Projects for Time Tracking</description>
    <label>FR</label>
</RecordType>