force-app/main/default/objects/Special_Project__c/recordTypes/Litigation.recordType-meta.xml
<RecordType>
    <fullName>Litigation</fullName>
    <active>true</active>
    <description>Litigation special projects for time tracking</description>
    <label>Litigation</label>
</RecordType>