force-app/main/default/objects/Special_Project__c/recordTypes/TFR.recordType-meta.xml
<RecordType>
    <fullName>TFR</fullName>
    <active>true</active>
    <label>TFR</label>
</RecordType>