force-app/main/default/objects/Special_Project__c/listViews/Litigation_Special_Projects.listView-meta.xml
<ListView>
    <fullName>Litigation_Special_Projects</fullName>
    <columns>NAME</columns>
    <columns>Is_Billable__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Require_Comments__c</columns>
    <columns>Location_Group__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Special_Project__c.Litigation</value>
    </filters>
    <label>Litigation Special Projects</label>
</ListView>