force-app/main/default/objects/Special_Project__c/listViews/TAS_Special_Project.listView-meta.xml
<ListView>
    <fullName>TAS_Special_Project</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Billable__c</columns>
    <columns>Location_Group__c</columns>
    <columns>Require_Comments__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Special_Project__c.Beta</value>
    </filters>
    <label>TAS Special Project</label>
</ListView>