force-app/main/default/objects/Special_Project__c/listViews/TFR_Special_Projects.listView-meta.xml
<ListView>
    <fullName>TFR_Special_Projects</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Require_Comments__c</columns>
    <columns>Is_Billable__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Location_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Special_Project__c.TFR</value>
    </filters>
    <label>TFR Special Projects</label>
</ListView>